--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -14,11 +14,12 @@
             android:id="@+id/lblJobNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textSize="20dp"
             android:text="No: " android:layout_column="0"/>
 
         <TextView
             android:id="@+id/tvJobNo"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="999"
@@ -34,29 +35,32 @@
             android:id="@+id/Status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Status "
+            android:text="Status: "
             />
 
         <TextView
             android:id="@+id/tvJobStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="JobStatus"
-            android:maxWidth="100dp"
-            android:minWidth="100dp"/>
+            android:text="follow-up"
+            android:maxWidth="78dp"
+            android:minWidth="78dp"/>
         </LinearLayout>
+    </TableRow>
+
+    <TableRow>
+        <TextView
+            android:id="@+id/tvJobProblem"
+            android:text="JobProblem"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/tvJobNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </TableRow>
 
 
 
-    <TextView
-        android:id="@+id/tvJobProblem"
-        android:text="JobProblem"
-        android:layout_marginLeft="10dp"
-        android:textSize="20dp"
-        android:layout_below="@+id/tvJobNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvJobStartDataTime"
