--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -330,6 +330,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
                 android:text="Add Photo"
+                android:textSize="12dp"
                 android:textColor="@drawable/styled_text"/>
             <Button
                 android:layout_width="wrap_content"
@@ -338,19 +339,44 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
                 android:textColor="@drawable/styled_text"
+                android:textSize="12dp"
                 android:text="Open Light"/>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start Job"
+                android:layout_weight="1"
                 android:layout_margin="5dp"
+                android:textSize="12dp"
                 android:background="@drawable/styled_button"
                 android:textColor="@drawable/styled_text"
+                android:text="Cancel Job"/>
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-               />
+                android:layout_margin="5dp"
+                android:textSize="12dp"
+                android:background="@drawable/styled_button"
+                android:textColor="@drawable/styled_text"
+                android:text="Postpone"/>
+
+
 
         </LinearLayout>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Job"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:background="@drawable/styled_button"
+            android:textColor="@drawable/styled_text"
+            android:layout_weight="1"
+            />
     </LinearLayout>
 
 </ScrollView>
