--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -343,6 +343,7 @@
                 android:text="Open Light"/>
 
             <Button
+                android:id="@+id/jobDetail_btnCancelJob"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -354,6 +355,7 @@
 
 
             <Button
+                android:id="@+id/jobDetail_btnPostpone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
